--- a/assets/package.json
+++ b/assets/package.json
@@ -122,6 +122,7 @@
     "select2": "^4.0.13",
     "sparklines": "^1.2.0",
     "summernote": "^0.8.16",
+    "sweetalert": "^2.1.2",
     "sweetalert2": "^9.10.8",
     "tempusdominus-bootstrap-4": "^5.1.2",
     "toastr": "^2.1.4"
